tests/NormalTests/paczka1/small_fuzzy/37880560.err
Error in line 8: FwE A860 1,3
Error in line 3: mYeLPJiBpi A193 91,3
